# docx2md

./: .gitignore  README.md  README_zh.md  UPLOAD_STORAGE_GUIDE.md  pyproject.toml
converter/: __init__.py  cli.py  numbering.py  webapp.py  word2md.py
templates/: index.html
