[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "doc2md"
version = "0.1.0"
description = "Word (.docx) to Markdown converter"
requires-python = ">=3.9"
dependencies = [
    "Flask>=3.0.0",
]

[project.scripts]
doc2md = "converter.cli:main"

[tool.setuptools.packages.find]
include = ["converter*"]
